css/menikah.css
/* ... */
.footer p {
  color: white;
  font-weight: 500;
  font-size: 10pt;
  display: inline-block;
  vertical-align: middle;
}


.main-content .no-padding-top {
  padding-top: 0px;
}

.footer img{
  margin: 10px 0px 10px 10px;
  display: inline-block;
  max-height: 24px;
  vertical-align: middle;
}

.footer a .nav-item {
  color: whitesmoke;
}

.fa-download {
  color: #43485c;
}

.divider {
  margin-top: 0.3rem !important; /* reduce space above divider */
  margin-bottom: 1.2rem;
  display: inline-block;
  max-height: 60px;
  vertical-align: middle;
}

.bismillah {
  margin: 25px;
  display: inline-block;
  max-height: 50px;
  vertical-align: middle;
}

#toTop {
  height: 50px;
  width: 50px;
  display: none;
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 99;
  border: none;
  outline: none;
  background-color: #996E6D;
  color: white;
  cursor: pointer;
  border-radius: 50%;
  font-size: 2rem;
  box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
}

#toTop a {
  color: white;
}

#toTop:hover {
  background-color: #BC8887;
}

::-webkit-scrollbar {
  width: 8px;
  background-color: #F4E2E2;
}

::-webkit-scrollbar-thumb {
  box-shadow: inset 0 0 6px #996E6D;
  -webkit-box-shadow: inset 0 0 6px #996E6D;
  background-color: #BC8887;
}

body.preloader-site {
  overflow: hidden;
}

.preloader-wrapper {
  height: 100%;
  width: 100%;
  background: #D8A9A8;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999999;
}

.preloader-wrapper .preloader {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 120px;
}


.btn-whatsapp:hover {
  color: white;
  background-color: #bf7877;
  font-size: 1.2rem;
  border-radius: 10px;
  border: 2px solid #bf7877;
  width:  210px;
  height: 65px;
  align-items: center;
  margin: 1rem;
}


.btn-whatsapp {
  background-color: #bf7877;
  width:  210px;
  height: 65px;
  color: white;
  font-size: 1.2rem;
  border-radius: 10px;  
  border-left: 1px solid #bf7877;
  border-right: 1px solid #bf7877;
  border-top: 1px solid #bf7877;
  border-bottom: 1px solid #bf7877;
  align-items: center;
  margin: 1rem;

}


.btn-cta:hover {
  color:white;
  background-color: #bf7877;
  font-size: 1.2rem;
  border-radius: 10px;
  border: 2px solid #bf7877;
  width:  210px;
  height: 65px;
  align-items: center;
  margin: 1rem;
}

.btn-cta {
  background-color: #996E6D;
  width:  210px;
  height: 65px;
  color: white;
  font-size: 1.2rem;
  border: 2px solid #996E6D;
  border-radius: 10px;
  align-items: center;
  margin: 1rem;
}

.cashbac-logo-inline {
  width: 160px;
  vertical-align: middle;
}

.button-download {
  min-width: 200px;
  height: 55px;
  align-items: center;
  margin: 0.1rem;

}

.voucher-code {
  height: 55px;
  max-width: 180px;
  border: 2px solid #26ade4;
  border-radius: 10px 0 0 10px  ;
  font-size: 24px;
  padding: 15px;
}

.btn-voucher-code {
  height: 55px;
  min-width: 100px;
  border: 2px solid #26ade4;
  background-color: #26ade4;
  border-radius: 0 10px 10px 0;
  font-size: 20px;
  padding: 0;
  margin: 0;
  vertical-align: middle;
  color: white;
}

.fa-copy {
  margin-right: 5px;
}
.white
{color:ghostwhite}


.dusty-pink {color: #D8A9A8}
.dusty-pink-lighter {color: #EDD2D1}
.dusty-pink-lightest {color: #F4E2E2}
.dusty-pink-darker {color: #BC8887}
.dusty-pink-darkest {color: #996E6D}

.tile {
  border-radius: 10px;
}


.foto1 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-kang-emil.jpg");
  background-size: cover;
  background-position: center;
  background-repeat:no-repeat;
  min-height: 24rem;
}


.foto2 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-cashbac.jpg");
  background-size: cover;
  background-position: center;
  background-repeat:no-repeat;
  min-height: 24rem;
}

.foto3 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-selfie.jpg");
  background-size: cover;
  background-position: top;
  background-repeat:no-repeat;
  min-height: 24rem;
}

.foto4 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-lamaran.jpg");
  background-size: cover;
  background-position: top;
  background-repeat:no-repeat;
  min-height: 24rem;
}

.foto5 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-red-car.jpg");
  background-size: cover;
  background-position: center;
  background-repeat:no-repeat;
  min-height: 24rem;
}


.foto6 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-engagement-ami.jpg");
  background-size: cover;
  background-position: center;
  background-repeat:no-repeat;
  min-height: 24rem;
}



.title-foto {
  font-size: 18pt;
  font-family: 'Lato', sans-serif;
  font-weight: 700;
  text-align: left;
  color: white;
}


.subtitle-foto {
  font-family: 'Lato', sans-serif;
  font-weight: 700;
  font-size: 14pt;
  font-weight: 600;
  margin-top: 15px;
  text-align: left;
  color: white;
}

.section-light {
  background-image: url(../image/divider-flowers-leaves.png);
  background-position: bottom -30px center;
  background-repeat: no-repeat;
  background-size: initial;
}

.instagram {
  color: #996E6D;
  font-size: 1.25rem;
  font-weight: 900;
  margin-top: 0.5rem;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  padding: 10px;
}


/* for stopping the Cursive text to wrap */

.no-wrap {
  white-space: nowrap; /* Prevent text from wrapping */
  overflow: hidden; /* Prevent overflow */
  font-size: 8vw; /* Set font size based on viewport width */
}

@media screen and (max-width: 768px) {
  .no-wrap {
    font-size: 10vw; /* Adjust font size slightly larger for medium screens */
  }
}
/* ... */

